<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sala01.aula4.MainActivity">

    <TextView
        android:id="@+id/textview_titulo_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/titulo_main" />
    <Button
        android:id="@+id/button_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_activity"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/button_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_fragment"
        android:layout_weight="0.5"
        android:layout_margin="40dp"
        android:layout_gravity="center"
        android:textSize="30sp"/>
</LinearLayout>
