<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sala01.aula4.DetalheActivity">

    <ScrollView
        android:id="@+id/scrollview_ciclo_de_vida"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titulo_ciclo_de_vida"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textview_subtitulo_ciclo_de_vida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageview_ciclo_de_vida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_imageview_ciclo_de_vida"
                android:src="@drawable/ciclo_de_vida_activity" />


            <Button
                android:id="@+id/button_definicao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="30dp"
                android:text="@string/label_button_definicao" />

            <Button
                android:id="@+id/button_voltar_ciclo_de_vida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="30dp"
                android:text="@string/label_button_voltar" />
        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:id="@+id/scrollview_definicao"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titulo_definicao"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textview_subtitulo_definicao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textview_definicao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:text="@string/definicao_fragment"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_voltar_definicao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="30dp"
                android:text="@string/label_button_voltar" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
